<resources>
    <string name="app_name">Movie Catalogue</string>
    <string name="judul_film">judul film</string>
    <string name="deskripsi">ini adalah deskripsi dari sebuah film layar lebar. sekian terima kasih</string>
    <string name="tag3">ini tag 3</string>
    <string name="name">judul film</string>
    <string name="content">sinopsis  lengkap film</string>
    <string name="kategory">kategori film</string>
    <string name="sutradara">sutradara film</string>
    <string name="produser">rumah produksi</string>
    <string name="pemain">pemain film</string>
    <string name="pemeran1">pemeran film pertama</string>
    <string name="pemeran2">pemeran film kedua</string>
    <string name="pemeran3">pemeran film ketiga</string>
    <string name="tahun">tahun produksi</string>
    <string-array name="data_movie">
        <item>Ada Apa Dengan Cinta 2</item>
        <item>Ayat Ayat Cinta</item>
        <item>Catatan Akhir Kuliah</item>
        <item>Habibie Ainun</item>
        <item>Laskar Pelangi</item>
        <item>Mimpi Sejuta Dollar</item>
        <item>Negeri 5 Menara</item>
        <item>Sang Pemimpi</item>
        <item>Tendangan dari Langit</item>
        <item>Tenggelamnya Kapal Van Der Wicjk</item>
        <item>Yo Wis Ben</item>
    </string-array>
    <string-array name="data_deskripsi">
        <item>14 tahun setelah percintaan mereka di sekolah menengah, Rangga dan Cinta bersatu kembali di Yogyakarta untuk menutup kisah mereka setelah Rangga meninggalkan Cinta tanpa penjelasan.</item>
        <item>Ini adalah kisah cinta. Tapi bukan cuma sekadar kisah cinta yang biasa. Ini tentang bagaimana menghadapi turun-naiknya persoalan hidup dengan cara Islam.</item>
        <item>Sam Maulana , Sobari , Ajeb  berjanji akan wisuda bersama. Ternyata hanya Sam yang belum menyelesaikan tugas akhir (skripsi). Kesedihan Sam semakin komplet, saat mengetahui kalau Kodok, dikaguminya ternyata sudah memiliki pacar bernama Iwan . </item>
        <item>Punya mimpi tak akan pernah mudah. Habibie dan Ainun tahu itu. Cinta mereka terbangun dalam perjalanan mewujudkan mimpi. </item>
        <item>Mimpi adalah kunci untuk kita menaklukkan dunia Berlarilah tanpa lelah, sampai engkau meraihnya Laskar pelangi tak kan terikat waktu Bebaskan mimpimu di angkasa warnai bintang di jiwa</item>
        <item>Merry Riana , gadis lulusan SMA, mengungsi ke Singapura dengan terpaksa karena kondisi negaranya yang sedang tidak stabil.</item>
        <item>Di bawah menara masjid yang menjulang, mereka berenam kerap menunggu maghrib sambil menatap awan lembayung yang berarak pulang ke ufuk. </item>
        <item>Kisah perjuangan hidup Ikal dan sepupunya, Arai, dan sahabatnya, Jimbron - sebuah potret para remaja yang tengah mencari identitas diri dan seksualitasnya, dengan latar belakang Belitong tempo dulu.</item>
        <item>Terlahir dari keluarga sederhana yang tinggal di lereng Gunung Bromo, Wahyu merajut impiannya untuk menjadi pemain sepak bola kenamaan tanah air demi membahagiakan ayah dan ibunya.</item>
        <item>Dari Makasar, Zainuddin berlayar menuju tanah kelahiran ayahnya di Padang Panjang. Hatinya terpikat pada seorang gadis jelita bangsawan, Hayati. Namun apa daya, adat istiadat menghalangi cinta mereka.</item>
        <item>Bayu menyukai Susan sejak lama, namun merasa minder dengan keadaan dirinya yang pas-pasan. Bayu bertekad mengubah dirinya menjadi lebih populer dari Roy, pacar Susan yang gitaris band. Ia membentuk band bersama teman-temannya, yang dinamai Yowis Ben.</item>
    </string-array>
    <string-array name="dataSutradara">
        <item>Riri Riza</item>
        <item>Hanung Bramantyo</item>
        <item>Jay Sukmo</item>
        <item>Faozan Rizal</item>
        <item>Riri Riza</item>
        <item>Hestu Saputra</item>
        <item>Affandi Abdul Rachman</item>
        <item>Riri Riza</item>
        <item>Hanung Bramantyo</item>
        <item>Sunil Soraya</item>
        <item>Fajar Nugros, Bayu Skak</item>
    </string-array>
    <string-array name="dataProduksi">
        <item>Miles Production dan Legacy Pictures</item>
        <item>MD Pictures</item>
        <item>DariHati Films</item>
        <item>MD Pictures</item>
        <item>Miles Films, Mizan Production, SinemaArt</item>
        <item>MD Pictures</item>
        <item>Million Pictures</item>
        <item>Miles Films, Mizan Production</item>
        <item>SinemaArt Pictures</item>
        <item>Soraya Intercine Films</item>
        <item>Star Vision</item>
    </string-array>
    <string-array name="dataTahun">
        <item>2016</item>
        <item>2008</item>
        <item>2015</item>
        <item>2012</item>
        <item>2008</item>
        <item>2014</item>
        <item>2012</item>
        <item>2009</item>
        <item>2011</item>
        <item>2013</item>
        <item>2018</item>
    </string-array>
    <string-array name="dataPemain1">
        <item>dian sastrowardoyp</item>
        <item>Fedi Nuril</item>
        <item>Muhadkly Acho</item>
        <item>Reza Rahardan</item>
        <item>Zulfanny</item>
        <item>Chelsea Islan</item>
        <item>Ikang Fauzi</item>
        <item>Rendy Ahmad</item>
        <item>Irfan Bachdim</item>
        <item>Herjunot Ali</item>
        <item>Bayu Skak</item>
    </string-array>
    <string-array name="dataPemain2">
        <item>Nicholas Saputra</item>
        <item>Rianti Cartwright</item>
        <item>Abdur Arsyad</item>
        <item>Bunga Citra Lestari</item>
        <item>Ferdian</item>
        <item>Dion Wiyoko</item>
        <item>Lulu Tobing</item>
        <item>Lukman Sardi</item>
        <item>Kim Jefri Kurniawan</item>
        <item>Pevita Pearce</item>
        <item>Joshua Suherman</item>
    </string-array>
    <string-array name="dataPemain3">
        <item>Titi Kamal</item>
        <item>Carissa Putri</item>
        <item>Dina Anjani</item>
        <item>Tio Pakusadewo</item>
        <item>lukman Sardi</item>
        <item>Kimberly Ryder</item>
        <item>David Chalik</item>
        <item>Mathias Muchus</item>
        <item>Maudy Ayunda</item>
        <item>Reza Rahardian</item>
        <item>Cut Meyriska</item>
    </string-array>
</resources>