<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".DetailMovie"
    android:layout_margin="12dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/img_main"
                android:layout_width="125dp"
                android:layout_height="175dp"
                android:scaleType="fitXY"
                tools:src="@drawable/ic_launcher_background" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_judul"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:text="@string/name" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="Sutradara" />
                <TextView
                    android:id="@+id/tv_sutradara"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="@string/sutradara" />

                <TextView
                    android:id="@+id/textview1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="Produksi" />

                <TextView
                    android:id="@+id/tv_produksi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="@string/produser" />
                <TextView
                    android:id="@+id/textview3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="Tahun" />

                <TextView
                    android:id="@+id/tv_tahun"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="@string/tahun" />
            </LinearLayout>

        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/pemain"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/img_pemeran1"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginRight="12dp"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true" />

                <TextView
                    android:id="@+id/tv_pemain1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/img_pemeran1"
                    android:layout_centerHorizontal="true"
                    android:textSize="16sp"
                    tools:text="@string/pemeran1" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/img_pemeran2"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginRight="3dp"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"/>

                <TextView
                    android:id="@+id/tv_pemain2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/img_pemeran2"
                    android:layout_centerHorizontal="true"
                    android:textSize="16sp"
                    tools:text="@string/pemeran2" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/img_pemeran3"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginRight="3dp"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true" />
                <TextView
                    android:id="@+id/tv_pemain3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/img_pemeran3"
                    android:layout_centerHorizontal="true"
                    android:textSize="16sp"
                    tools:text="@string/pemeran3" />
            </RelativeLayout>

        </LinearLayout>

        <!--<RelativeLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content">-->

            <!--<TextView-->
                <!--android:id="@+id/nama1"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_alignParentTop="true"-->
                <!--android:text="Tag"-->
                <!--android:textSize="20sp" />-->

            <!--<TextView-->
                <!--android:id="@+id/tag1"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_below="@id/nama1"-->
                <!--android:layout_marginRight="10dp"-->
                <!--android:background="@color/darkGrey"-->
                <!--android:padding="3dp"-->
                <!--tools:text="@string/tag1"-->
                <!--android:textColor="@color/black" />-->

            <!--<TextView-->
                <!--android:id="@+id/tag2"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_below="@id/nama1"-->
                <!--android:layout_marginRight="10dp"-->
                <!--android:layout_toEndOf="@id/tag1"-->
                <!--android:background="@color/darkGrey"-->
                <!--android:padding="3dp"-->
                <!--tools:text="@string/tag2"-->
                <!--android:textColor="@color/black" />-->

            <!--<TextView-->
                <!--android:id="@+id/tag3"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_below="@id/nama1"-->
                <!--android:layout_marginRight="10dp"-->
                <!--android:layout_toEndOf="@id/tag2"-->
                <!--android:background="@color/darkGrey"-->
                <!--android:padding="3dp"-->
                <!--tools:text="@string/tag3"-->
                <!--android:textColor="@color/black" />-->


        <!--</RelativeLayout>-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="8dp">

                <TextView
                    android:id="@+id/judul"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/name"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tv_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                    android:layout_below="@id/judul"
                    tools:text="@string/content" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>